cmake_minimum_required(VERSION 3.12)
project(SPL191_1)

set(CMAKE_CXX_STANDARD 11)

<<<<<<<<< Temporary merge branch 1
add_executable(SPL191_1 Main.cpp Dish.cpp Dish.cpp Restaurant.cpp Customer.cpp)
=========
add_executable(SPL191_1 Main.cpp OrderPair.cpp OrderPair.h VegetarianCustomer.cpp Table.cpp CheapCustomer.cpp SpicyCustomer.cpp alchoholicCustomer.cpp)
>>>>>>>>> Temporary merge branch 2
